# weather-air-analytics

./: .gitignore  README.md  commands.txt  run.sh
.github/workflows/: streams-insights-ci.yml
air-meteo-insights/: README.md  build.sbt
air-meteo-insights/infrastructure/: Dockerfile  docker-compose.yml
data/: european_cities.csv
etl/: README.md
etl/infrastructure/: Dockerfile  docker-compose.yml
etl/ingestion/: README.md
etl/ingestion/ingestion/: config.py  main.py  paths.py  pyproject.toml  settings.toml
etl/ingestion/ingestion/client/: open_meteo_client.py
etl/ingestion/ingestion/fetcher/: air_quality_fetcher.py  fetcher.py  meteo_fetcher.py
etl/load/: README.md  build.sbt
etl/transformation/: build.sbt
infrastructure/: docker-compose.yml
open-meteo/: README.md
open-meteo/config/: config.json
open-meteo/scripts/: air_quality.py  historical_weather.py  main.py
orchestrator/: Dockerfile  README.md  docker-compose.yaml
orchestrator/dags/: analytics.py  convert_to_delta_dags.py  delta_dags.py  first.py  transformation.py
streams-insights/: README.md  build.sbt
streams-insights/.bsp/: sbt.json
streams-insights/air-quality-analyzer/: README.md  build.sbt
streams-insights/infrastructure/: docker-compose.yml  update_run.sh
visualization/: README.md
visualization/aqi-server/: Dockerfile  pyproject.toml
visualization/aqi-server/server/: config.py  main.py  paths.py  settings.toml  transofrm.py
visualization/aqi-server/server/kafka/: configuration.py  consumer.py
weather-air-insights/: build.sbt
(+234 files in other folders)
