[tool.poetry]
name = "aqi-server"
version = "0.1.0"
description = ""
authors = ["Bojan Radovic <rbojan2000@gmail.com>"]
packages = [{include = "aqi_server"}]

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.1.11"
confluent-kafka = "^2.0.2"
requests = "^2.28.2"
fastavro = "^1.7.1"
dash = "^2.8.1"
pandas = "^2.2.1"
dash-bootstrap-components = "^1.3.1"
dash-daq = "^0.5.0"
fastparquet = "^2023.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
