[tool.poetry]
name = "aqi-server"
version = "0.1.0"
description = ""
authors = ["Bojan Radovic <rbojan2000@gmail.com>"]
packages = [{include = "ingestion"}]

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.1.11"
pandas = "^2.2.1"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
